[new]変数の追加

--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/img/logo/favicon.png"
+      sizes="192x192"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="/assets/scss/style.css" />
-    <title>Document</title>
+    <title>PON DESIGN</title>
   </head>
   <body>
-    <h1>こんにちは</h1>
+    <header>
+      <figure>
+        <img src="/assets/img/logo/logo.png" />
+      </figure>
+      <nav>
+        <ul>
+          <li>NEWS</li>
+          <li>SERVICE</li>
+          <li>WORKS</li>
+          <li>COMPANY</li>
+          <li>RECRUIT</li>
+          <li>CONTACT</li>
+        </ul>
+      </nav>
+      <h1>WEB DESIGN SPECIALIST</h1>
+      <p>お客様の夢を叶えるWebサイトを制作</p>
+    </header>
   </body>
 </html>
