[new]トップページのコンポーネント

--- a/index.html
+++ b/index.html
@@ -32,6 +32,41 @@
       </nav>
       <h1>WEB DESIGN SPECIALIST</h1>
       <p>お客様の夢を叶えるWebサイトを制作</p>
+      <a class="c-clearButton">CONTACT</a>
     </header>
+
+    <main>
+      <div>
+        <h2 class="c-mainTitle">NEWS</h2>
+        <p class="c-subTitle">お知らせ</p>
+      </div>
+
+      <div class="c-newsItem">
+        <time class="c-time">2030.02.01</time>
+        <div class="c-newsIcon">お知らせ</div>
+        <p class="c-newsItem__context">
+          Webデザインニュースサイト「ウェブマガジン」に取材いただきました
+        </p>
+      </div>
+      <!-- .c-newsItem -->
+
+      <div class="c-serviceCard">
+        <figure class="c-serviceCard__img">
+          <img src="/assets/img/images/servise_production.png" />
+        </figure>
+        <h3 class="c-serviceCard__title">Webサイト制作</h3>
+        <p class="c-serviceCard__context">
+          新規サイトの制作はもちろんサイトリニューアルやランディングページの制作も可能です。
+        </p>
+      </div>
+      <!-- .c-serviceCard -->
+
+      <div class="c-mainButton">
+        <a href=""> MORE </a>
+        <img src="/assets/img/logo/caret-right_14px.png" />
+      </div>
+      <!-- .c-mainButton -->
+      
+    </main>
   </body>
 </html>
