--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
           <li>CONTACT</li>
         </ul>
       </nav>
+    </header>
+
+    <div>
       <h1>WEB DESIGN SPECIALIST</h1>
       <p>お客様の夢を叶えるWebサイトを制作</p>
-      <a class="c-clearButton">CONTACT</a>
-    </header>
+
+      <div class="c-clearButton">
+        <a href="">CONTACT</a>
+        <img src="/assets/img/logo/caret-right_14px.png" />
+      </div>
+    </div>
 
     <main>
       <div>
