--- a/index.html
+++ b/index.html
@@ -16,32 +16,39 @@
     <title>PON DESIGN</title>
   </head>
   <body>
-    <header>
-      <figure>
-        <img src="/assets/img/logo/logo.png" />
-      </figure>
-      <nav>
-        <ul>
-          <li>NEWS</li>
-          <li>SERVICE</li>
-          <li>WORKS</li>
-          <li>COMPANY</li>
-          <li>RECRUIT</li>
-          <li>CONTACT</li>
-        </ul>
-      </nav>
-    </header>
+    <div class="l-header-bg">
+      <header class="l-header">
+        <figure class="l-header__logo">
+          <img src="/assets/img/logo/logo.png" />
+        </figure>
+        <nav class="l-header__nav">
+          <ul class="l-header__nav-list">
+            <li class="l-header__nav-list-item"><a href="">NEWS</a></li>
+            <li class="l-header__nav-list-item"><a href="">SERVICE</a></li>
+            <li class="l-header__nav-list-item"><a href="">WORKS</a></li>
+            <li class="l-header__nav-list-item"><a href="">COMPANY</a></li>
+            <li class="l-header__nav-list-item"><a href="">RECRUIT</a></li>
+            <li class="l-header__nav-list-item"><a href="">CONTACT</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <div>
-      <h1>WEB DESIGN SPECIALIST</h1>
-      <p>お客様の夢を叶えるWebサイトを制作</p>
+      <div class="l-header-sub">
+        <h1 class="l-header-sub__main-title">WEB DESIGN SPECIALIST</h1>
+        <p class="l-header-sub__sub-title">お客様の夢を叶えるWebサイトを制作</p>
 
-      <div class="c-clearButton">
-        <a href="">CONTACT</a>
-        <img src="/assets/img/logo/caret-right_14px.png" />
+        <div class="l-header-sub__button">
+          <div class="c-clearButton">
+            <a href="">CONTACT</a>
+            <img src="/assets/img/logo/caret-right_14px.png" />
+          </div>
+          <!-- .c-clearButton -->
+        </div>
+        <!-- .l-header-sub__button -->
       </div>
+      <!-- .l-header-sub -->
     </div>
-
+    <!-- .l-header-bg -->
     <main>
       <div>
         <h2 class="c-mainTitle">NEWS</h2>
@@ -73,7 +80,20 @@
         <img src="/assets/img/logo/caret-right_14px.png" />
       </div>
       <!-- .c-mainButton -->
-      
+
+      <footer class="l-footer">
+        <nav class="l-footer__nav">
+          <ul class="l-footer__nav-list">
+            <li class="l-footer__nav-list-item"><a href="">NEWS</a></li>
+            <li class="l-footer__nav-list-item"><a href="">SERVICE</a></li>
+            <li class="l-footer__nav-list-item"><a href="">WORKS</a></li>
+            <li class="l-footer__nav-list-item"><a href="">COMPANY</a></li>
+            <li class="l-footer__nav-list-item"><a href="">RECRUIT</a></li>
+            <li class="l-footer__nav-list-item"><a href="">CONTACT</a></li>
+          </ul>
+        </nav>
+        <p class="l-footer__copy">&copy; PON DESIGN</p>
+      </footer>
     </main>
   </body>
 </html>
