[new]ニュースページのスタイリング

--- a/index.html
+++ b/index.html
@@ -50,36 +50,97 @@
     </div>
     <!-- .l-header-bg -->
     <main>
-      <div>
-        <h2 class="c-mainTitle">NEWS</h2>
-        <p class="c-subTitle">お知らせ</p>
-      </div>
+      <section>
+        <div>
+          <h2 class="c-mainTitle">NEWS</h2>
+          <p class="c-subTitle">お知らせ</p>
+        </div>
 
-      <div class="c-newsItem">
-        <time class="c-time">2030.02.01</time>
-        <div class="c-newsIcon">お知らせ</div>
-        <p class="c-newsItem__context">
-          Webデザインニュースサイト「ウェブマガジン」に取材いただきました
-        </p>
-      </div>
-      <!-- .c-newsItem -->
+        <div class="c-newsItem">
+          <time class="c-time">2030.02.01</time>
+          <div class="c-newsIcon">お知らせ</div>
+          <p class="c-newsItem__context">
+            Webデザインニュースサイト「ウェブマガジン」に取材いただきました
+          </p>
+        </div>
+        <!-- .c-newsItem -->
+        <div class="c-newsItem">
+          <time class="c-time">2030.01.25</time>
+          <div class="c-newsIcon">制作実績</div>
+          <p class="c-newsItem__context">
+            Smoothiesta様のWebサイトを制作いたしました
+          </p>
+        </div>
+        <!-- .c-newsItem -->
+        <div class="c-newsItem">
+          <time class="c-time">2030.01.20</time>
+          <div class="c-newsIcon">採用</div>
+          <p class="c-newsItem__context">Webデザイナーを１名募集中です！</p>
+        </div>
+        <!-- .c-newsItem -->
+      </section>
 
-      <div class="c-serviceCard">
-        <figure class="c-serviceCard__img">
-          <img src="/assets/img/images/servise_production.png" />
-        </figure>
-        <h3 class="c-serviceCard__title">Webサイト制作</h3>
-        <p class="c-serviceCard__context">
-          新規サイトの制作はもちろんサイトリニューアルやランディングページの制作も可能です。
-        </p>
-      </div>
-      <!-- .c-serviceCard -->
+      <section>
+        <div>
+          <h2 class="c-mainTitle">SERVICE</h2>
+          <p class="c-subTitle">事業内容</p>
+        </div>
+
+        <div class="c-serviceCard">
+          <figure class="c-serviceCard__img">
+            <img src="/assets/img/images/servise_production.png" />
+          </figure>
+          <h3 class="c-serviceCard__title">Webサイト制作</h3>
+          <p class="c-serviceCard__context">
+            新規サイトの制作はもちろんサイトリニューアルやランディングページの制作も可能です。
+          </p>
+        </div>
+        <!-- .c-serviceCard -->
+        <div class="c-serviceCard">
+          <figure class="c-serviceCard__img">
+            <img src="/assets/img/images/service_operation.png" />
+          </figure>
+          <h3 class="c-serviceCard__title">Webサイト運用</h3>
+          <p class="c-serviceCard__context">
+            サイトの更新作業や独自のアクセス解析に基づいたサイト改善のご提案をいたします。
+          </p>
+        </div>
+        <!-- .c-serviceCard -->
+        <div class="c-serviceCard">
+          <figure class="c-serviceCard__img">
+            <img src="/assets/img/images/service_app.png" />
+          </figure>
+          <h3 class="c-serviceCard__title">アプリ開発</h3>
+          <p class="c-serviceCard__context">
+            スマートフォンアプリ開発の他、Vue.jsやReactによるWebアプリの開発が可能です。
+          </p>
+        </div>
+        <!-- .c-serviceCard -->
+      </section>
 
       <div class="c-mainButton">
         <a href=""> MORE </a>
         <img src="/assets/img/logo/caret-right_14px.png" />
       </div>
       <!-- .c-mainButton -->
+
+      <section class="l-contact">
+        <div class="l-contact__title">
+          <h2 class="c-mainTitle">CONTACT</h2>
+          <p class="c-subTitle">お問い合わせ</p>
+        </div>
+        <p class="l-contact__message">
+          Webサイトの制作のご依頼やお見積りなど、お気軽にご相談ください。
+        </p>
+        <div class="l-contact__button">
+          <div class="c-mainButton">
+            <a href="contact.html"> MORE </a>
+            <img src="/assets/img/logo/caret-right_14px.png" />
+          </div>
+          <!-- .c-mainButton -->
+        </div>
+        <!-- .l-contact__button -->
+      </section>
 
       <footer class="l-footer">
         <nav class="l-footer__nav">
