[new]サービス、ニュース詳細、ワークページのPC版スタイリング

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>PON DESIGN</title>
   </head>
   <body>
-    <div class="l-header-bg">
+    <div class="l-header-bg-top">
       <header class="l-header">
         <figure class="l-header__logo">
           <img src="/assets/img/logo/logo.png" />
@@ -33,11 +33,11 @@
         </nav>
       </header>
 
-      <div class="l-header-sub">
-        <h1 class="l-header-sub__main-title">WEB DESIGN SPECIALIST</h1>
-        <p class="l-header-sub__sub-title">お客様の夢を叶えるWebサイトを制作</p>
+      <div class="l-header-sub-index">
+        <h1 class="l-header-sub-index__main-title">WEB DESIGN SPECIALIST</h1>
+        <p class="l-header-sub-index__sub-title">お客様の夢を叶えるWebサイトを制作</p>
 
-        <div class="l-header-sub__button">
+        <div class="l-header-sub-index__button">
           <div class="c-clearButton">
             <a href="">CONTACT</a>
             <img src="/assets/img/logo/caret-right_14px.png" />
