[new]トップページのレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
       <div class="l-header-sub-index">
         <h1 class="l-header-sub-index__main-title">WEB DESIGN SPECIALIST</h1>
-        <p class="l-header-sub-index__sub-title">お客様の夢を叶えるWebサイトを制作</p>
+        <p class="l-header-sub-index__sub-title">
+          お客様の夢を叶えるWebサイトを制作
+        </p>
 
         <div class="l-header-sub-index__button">
           <div class="c-clearButton">
@@ -59,24 +61,30 @@
 
           <div class="p-index-news__list">
             <div class="c-newsItem p-index-news__list-item">
-              <time class="c-time">2030.02.01</time>
-              <div class="c-newsIcon">お知らせ</div>
+              <div class="c-newsItem__title">
+                <time class="c-time">2030.02.01</time>
+                <div class="c-newsIcon">お知らせ</div>
+              </div>
               <p class="c-newsItem__context">
                 Webデザインニュースサイト「ウェブマガジン」に取材いただきました
               </p>
             </div>
             <!-- .c-newsItem -->
             <div class="c-newsItem p-index-news__list-item">
-              <time class="c-time">2030.01.25</time>
-              <div class="c-newsIcon">制作実績</div>
+              <div class="c-newsItem__title">
+                <time class="c-time">2030.01.25</time>
+                <div class="c-newsIcon">制作実績</div>
+              </div>
               <p class="c-newsItem__context">
                 Smoothiesta様のWebサイトを制作いたしました
               </p>
             </div>
             <!-- .c-newsItem -->
             <div class="c-newsItem p-index-news__list-item">
-              <time class="c-time">2030.01.20</time>
-              <div class="c-newsIcon">採用</div>
+              <div class="c-newsItem__title">
+                <time class="c-time">2030.01.20</time>
+                <div class="c-newsIcon">採用</div>
+              </div>
               <p class="c-newsItem__context">Webデザイナーを１名募集中です！</p>
             </div>
             <!-- .c-newsItem -->
@@ -159,10 +167,6 @@
       </section>
 
       <section class="p-index-company">
-        <figure class="p-index-company__bg">
-          <img src="/assets/img/bg/bg_company.png" />
-        </figure>
-
         <div class="p-index-company__context">
           <div class="p-index-company__context-title">
             <h2 class="c-mainTitle">COMPANY</h2>
@@ -173,9 +177,9 @@
           </h3>
           <p class="p-index-company__context-message">
             お客様の夢を叶えること。<br />
-            それがWebサイトのゴールであり、私たちが目指すことです。<br />
-            だからこそちゃんと成果を出すサイトを全力でお作りします。<br />
-            お客様の笑顔を見たい<br />
+            それがWebサイトのゴールであり、<span class="l-additional-break"></span>私たちが目指すことです。<br />
+            だからこそちゃんと成果を出すサイトを<span class="l-additional-break"></span>全力でお作りします。<br />
+            お客様の笑顔を見たい。<br />
             夢を実現する手助けをさせてください。
           </p>
           <div class="p-index-company__context-button">
@@ -196,7 +200,9 @@
             <h2 class="c-mainTitle">RECRUIT</h2>
             <p class="c-subTitle">採用情報</p>
           </div>
-          <p class="p-index-recruit__context-text">私たちと一緒に働きませんか？</p>
+          <p class="p-index-recruit__context-text">
+            私たちと一緒に働きませんか？
+          </p>
           <div class="p-index-recruit__context-button">
             <div class="c-mainButton">
               <a href=""> MORE </a>
@@ -219,7 +225,7 @@
           <p class="c-subTitle">お問い合わせ</p>
         </div>
         <p class="l-contact__message">
-          Webサイトの制作のご依頼やお見積りなど、お気軽にご相談ください。
+          Webサイトの制作のご依頼やお見積りなど、<span class="l-additional-break"></span>お気軽にご相談ください。
         </p>
         <div class="l-contact__button">
           <div class="c-mainButton">
