--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>PON DESIGN</title>
   </head>
@@ -23,14 +27,31 @@
         </figure>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="">NEWS</a></li>
-            <li class="l-header__nav-list-item"><a href="">SERVICE</a></li>
-            <li class="l-header__nav-list-item"><a href="">WORKS</a></li>
-            <li class="l-header__nav-list-item"><a href="">COMPANY</a></li>
-            <li class="l-header__nav-list-item"><a href="">RECRUIT</a></li>
-            <li class="l-header__nav-list-item"><a href="">CONTACT</a></li>
+            <li class="l-header__nav-list-item"><a href="news/index.html">NEWS</a></li>
+            <li class="l-header__nav-list-item"><a href="service.html">SERVICE</a></li>
+            <li class="l-header__nav-list-item"><a href="works.html">WORKS</a></li>
+            <li class="l-header__nav-list-item"><a href="company.html">COMPANY</a></li>
+            <li class="l-header__nav-list-item"><a href="recruit.html">RECRUIT</a></li>
+            <li class="l-header__nav-list-item"><a href="contact.html">CONTACT</a></li>
           </ul>
         </nav>
+
+        <!-- ハンバーガーメニュー -->
+        <nav id="js-hamburger-nav" class="l-hamburger-nav">
+          <ul class="l-hamburger-nav__list">
+            <li class="l-hamburger-nav__list-item"><a href="news/index.html">NEWS</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="service.html">SERVICE</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="works.html">WORKS</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="company.html">COMPANY</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="recruit.html">RECRUIT</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="contact.html">CONTACT</a></li>
+          </ul>
+        </nav>
+        <div id="js-hamburger" class="l-hamburger">
+          <div class="l-hamburger__bar"></div>
+          <div class="l-hamburger__bar"></div>
+          <div class="l-hamburger__bar"></div>
+        </div>
       </header>
 
       <div class="l-header-sub-index">
@@ -51,6 +72,7 @@
       <!-- .l-header-sub -->
     </div>
     <!-- .l-header-bg -->
+
     <main>
       <section class="p-index-news">
         <div class="p-index-news__inner">
@@ -177,8 +199,14 @@
           </h3>
           <p class="p-index-company__context-message">
             お客様の夢を叶えること。<br />
-            それがWebサイトのゴールであり、<span class="l-additional-break"></span>私たちが目指すことです。<br />
-            だからこそちゃんと成果を出すサイトを<span class="l-additional-break"></span>全力でお作りします。<br />
+            それがWebサイトのゴールであり、<span
+              class="l-additional-break"
+            ></span
+            >私たちが目指すことです。<br />
+            だからこそちゃんと成果を出すサイトを<span
+              class="l-additional-break"
+            ></span
+            >全力でお作りします。<br />
             お客様の笑顔を見たい。<br />
             夢を実現する手助けをさせてください。
           </p>
@@ -225,7 +253,10 @@
           <p class="c-subTitle">お問い合わせ</p>
         </div>
         <p class="l-contact__message">
-          Webサイトの制作のご依頼やお見積りなど、<span class="l-additional-break"></span>お気軽にご相談ください。
+          Webサイトの制作のご依頼やお見積りなど、<span
+            class="l-additional-break"
+          ></span
+          >お気軽にご相談ください。
         </p>
         <div class="l-contact__button">
           <div class="c-mainButton">
@@ -236,10 +267,15 @@
         </div>
         <!-- .l-contact__button -->
       </section>
+    </main>
 
-      <footer class="l-footer">
-        <nav class="l-footer__nav">
-          <ul class="l-footer__nav-list">
+    <footer class="l-footer">
+      <nav class="l-footer__nav">
+        <ul class="l-footer__nav-list">
+          <div class="l-footer__nav-list-group">
+            <li class="l-footer__nav-list-item">
+              <a href="/">HOME</a>
+            </li>
             <li class="l-footer__nav-list-item">
               <a href="news/index.html">NEWS</a>
             </li>
@@ -249,6 +285,9 @@
             <li class="l-footer__nav-list-item">
               <a href="works.html">WORKS</a>
             </li>
+          </div>
+          <!-- .l-footer__nav-list-top -->
+          <div class="l-footer__nav-list-group">
             <li class="l-footer__nav-list-item">
               <a href="company.html">COMPANY</a>
             </li>
@@ -258,10 +297,12 @@
             <li class="l-footer__nav-list-item">
               <a href="contact.html">CONTACT</a>
             </li>
-          </ul>
-        </nav>
-        <p class="l-footer__copy">&copy; PON DESIGN</p>
-      </footer>
-    </main>
+          </div>
+        </ul>
+      </nav>
+      <p class="l-footer__copy">&copy; PON DESIGN</p>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/assets/js/hamburger.js"></script>
   </body>
 </html>
