--- a/service.html
+++ b/service.html
@@ -12,6 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/assets/scss/style.css" />
     <title>PON DESIGN</title>
   </head>
@@ -23,14 +27,31 @@
         </figure>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="">NEWS</a></li>
-            <li class="l-header__nav-list-item"><a href="">SERVICE</a></li>
-            <li class="l-header__nav-list-item"><a href="">WORKS</a></li>
-            <li class="l-header__nav-list-item"><a href="">COMPANY</a></li>
-            <li class="l-header__nav-list-item"><a href="">RECRUIT</a></li>
-            <li class="l-header__nav-list-item"><a href="">CONTACT</a></li>
+            <li class="l-header__nav-list-item"><a href="news/index.html">NEWS</a></li>
+            <li class="l-header__nav-list-item"><a href="service.html">SERVICE</a></li>
+            <li class="l-header__nav-list-item"><a href="works.html">WORKS</a></li>
+            <li class="l-header__nav-list-item"><a href="company.html">COMPANY</a></li>
+            <li class="l-header__nav-list-item"><a href="recruit.html">RECRUIT</a></li>
+            <li class="l-header__nav-list-item"><a href="contact.html">CONTACT</a></li>
           </ul>
         </nav>
+
+        <!-- ハンバーガーメニュー -->
+        <nav id="js-hamburger-nav" class="l-hamburger-nav">
+          <ul class="l-hamburger-nav__list">
+            <li class="l-hamburger-nav__list-item"><a href="news/index.html">NEWS</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="service.html">SERVICE</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="works.html">WORKS</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="company.html">COMPANY</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="recruit.html">RECRUIT</a></li>
+            <li class="l-hamburger-nav__list-item"><a href="contact.html">CONTACT</a></li>
+          </ul>
+        </nav>
+        <div id="js-hamburger" class="l-hamburger">
+          <div class="l-hamburger__bar"></div>
+          <div class="l-hamburger__bar"></div>
+          <div class="l-hamburger__bar"></div>
+        </div>
       </header>
 
       <div class="l-header-sub">
@@ -105,7 +126,10 @@
           <p class="c-subTitle">お問い合わせ</p>
         </div>
         <p class="l-contact__message">
-          Webサイトの制作のご依頼やお見積りなど、お気軽にご相談ください。
+          Webサイトの制作のご依頼やお見積りなど、<span
+            class="l-additional-break"
+          ></span
+          >お気軽にご相談ください。
         </p>
         <div class="l-contact__button">
           <div class="c-mainButton">
@@ -121,27 +145,37 @@
     <footer class="l-footer">
       <nav class="l-footer__nav">
         <ul class="l-footer__nav-list">
-          <li class="l-footer__nav-list-item">
-            <a href="news/index.html">NEWS</a>
-          </li>
-          <li class="l-footer__nav-list-item">
-            <a href="service.html">SERVICE</a>
-          </li>
-          <li class="l-footer__nav-list-item">
-            <a href="works.html">WORKS</a>
-          </li>
-          <li class="l-footer__nav-list-item">
-            <a href="company.html">COMPANY</a>
-          </li>
-          <li class="l-footer__nav-list-item">
-            <a href="recruit.html">RECRUIT</a>
-          </li>
-          <li class="l-footer__nav-list-item">
-            <a href="contact.html">CONTACT</a>
-          </li>
+          <div class="l-footer__nav-list-group">
+            <li class="l-footer__nav-list-item">
+              <a href="/">HOME</a>
+            </li>
+            <li class="l-footer__nav-list-item">
+              <a href="news/index.html">NEWS</a>
+            </li>
+            <li class="l-footer__nav-list-item">
+              <a href="service.html">SERVICE</a>
+            </li>
+            <li class="l-footer__nav-list-item">
+              <a href="works.html">WORKS</a>
+            </li>
+          </div>
+          <!-- .l-footer__nav-list-top -->
+          <div class="l-footer__nav-list-group">
+            <li class="l-footer__nav-list-item">
+              <a href="company.html">COMPANY</a>
+            </li>
+            <li class="l-footer__nav-list-item">
+              <a href="recruit.html">RECRUIT</a>
+            </li>
+            <li class="l-footer__nav-list-item">
+              <a href="contact.html">CONTACT</a>
+            </li>
+          </div>
         </ul>
       </nav>
       <p class="l-footer__copy">&copy; PON DESIGN</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/assets/js/hamburger.js"></script>
   </body>
 </html>
