--- a/company.html
+++ b/company.html
@@ -21,10 +21,10 @@
   </head>
   <body>
     <div class="l-header-bg-top l-header-bg">
-      <header class="l-header">
-        <figure class="l-header__logo">
+      <header id="js-header" class="l-header">
+        <a href="/" class="l-header__logo">
           <img src="/assets/img/logo/logo.png" />
-        </figure>
+        </a>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
             <li class="l-header__nav-list-item">
@@ -232,8 +232,13 @@
         </ul>
       </nav>
       <p class="l-footer__copy">&copy; PON DESIGN</p>
+      <a href="#" id="js-circleArrow__wrap" class="c-circleArrow__wrap">
+        <div class="c-circleArrow"></div>
+      </a>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/assets/js/hamburger.js"></script>
+    <script src="/assets/js/scrollSmooth.js"></script>
+    <script src="/assets/js/scrollHeader.js"></script>
   </body>
 </html>
