[fix]レスポンシブ崩れの軽微な修正

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="l-header-sub-index__button">
           <div class="c-clearButton">
-            <a href="">CONTACT</a>
+            <a href="contact.html">CONTACT</a>
             <img src="/assets/img/logo/caret-right_14px.png" />
           </div>
           <!-- .c-clearButton -->
@@ -111,9 +111,9 @@
                 <time class="c-time">2030.02.01</time>
                 <div class="c-newsIcon">お知らせ</div>
               </div>
-              <p class="c-newsItem__context">
+              <a href="/news/show.html" class="c-newsItem__context">
                 Webデザインニュースサイト「ウェブマガジン」に取材いただきました
-              </p>
+              </a>
             </div>
             <!-- .c-newsItem -->
             <div class="c-newsItem p-index-news__list-item">
@@ -179,7 +179,7 @@
         <!-- .p-index-service__cards -->
         <div class="p-index-service__button">
           <div class="c-mainButton">
-            <a href=""> MORE </a>
+            <a href="service.html"> MORE </a>
             <img src="/assets/img/logo/caret-right_14px.png" />
           </div>
           <!-- .c-mainButton -->
@@ -203,7 +203,7 @@
           </p>
           <div class="p-index-works__context-button">
             <div class="c-mainButton">
-              <a href=""> MORE </a>
+              <a href="works.html"> MORE </a>
               <img src="/assets/img/logo/caret-right_14px.png" />
             </div>
             <!-- .c-mainButton -->
@@ -236,7 +236,7 @@
           </p>
           <div class="p-index-company__context-button">
             <div class="c-mainButton">
-              <a href=""> MORE </a>
+              <a href="company.html"> MORE </a>
               <img src="/assets/img/logo/caret-right_14px.png" />
             </div>
             <!-- .c-mainButton -->
@@ -257,7 +257,7 @@
           </p>
           <div class="p-index-recruit__context-button">
             <div class="c-mainButton">
-              <a href=""> MORE </a>
+              <a href="recruit.html"> MORE </a>
               <img src="/assets/img/logo/caret-right_14px.png" />
             </div>
             <!-- .c-mainButton -->
