[new]robots.txt の設定

--- a/company.html
+++ b/company.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/scss/style.css" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>PON DESIGN</title>
   </head>
   <body>
@@ -167,7 +168,9 @@
             <li class="p-company__overview-list-item">
               <p class="p-company__overview-list-item-title">所在地</p>
               <p class="p-company__overview-list-item-text">
-                〒555-5555 東京都千代田区 ポンビルディング 606
+                〒555-5555<span class="l-additional-break"></span>
+                東京都千代田区<span class="l-additional-break"></span>
+                ポンビルディング606
               </p>
             </li>
           </ul>
