--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/scss/style.css" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>PON DESIGN</title>
   </head>
   <body>
@@ -211,14 +212,17 @@
                 ></textarea>
               </li>
               <li class="p-contact__form-list-item">
-                <label
-                  class="p-contact__form-list-item-label"
+                <label class="p-contact__form-list-item-label"
                   >PON DESIGNをどちらでお知りになりましたか？<span
                     class="required"
                     >*必須</span
                   ></label
                 >
-                <select class="p-contact__form-list-item-input" name="source" id="source">
+                <select
+                  class="p-contact__form-list-item-input"
+                  name="source"
+                  id="source"
+                >
                   <option value="">選択してください</option>
                   <option value="Google/Yahoo検索">Google/Yahoo検索</option>
                   <option value="SNS">SNS</option>
